--- a/small.css
+++ b/small.css
@@ -1,9 +1,10 @@
-@media (max-width: 600px) {
-	.container {
-		width: 100%;
-		margin: 0;
-	}
-	.hero img {
-		border-radius: 0;
-	}
+.container {
+	width: 100%;
+	margin: 0;
+}
+.hero img {
+	border-radius: 0;
+}
+body {
+	margin: 0
 }
